# playwright

./: configuration.py  pyproject.toml  pytest.ini
pages/: BasePage.py  Login.py  Products.py
tests/: conftest.py  test_login.py
